WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146674
AX: VoiceOver cannot get to any content in Yahoo Mail messages table
https://bugs.webkit.org/show_bug.cgi?id=146674
Summary
AX: VoiceOver cannot get to any content in Yahoo Mail messages table
chris fleizach
Reported
2015-07-06 23:35:49 PDT
VoiceOver cannot get to any content in Yahoo Mail messages table WebKit is exposing some presentational elements as AXGroup. These are in between the AXTable and AXRows. <
rdar://problem/21405928
>
Attachments
patch
(6.04 KB, patch)
2015-07-06 23:40 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(5.11 KB, patch)
2015-07-06 23:47 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2015-07-06 23:40:21 PDT
Created
attachment 256280
[details]
patch
WebKit Commit Bot
Comment 2
2015-07-06 23:43:22 PDT
Attachment 256280
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:27: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
chris fleizach
Comment 3
2015-07-06 23:47:46 PDT
Created
attachment 256282
[details]
patch
WebKit Commit Bot
Comment 4
2015-07-09 00:32:33 PDT
Comment on
attachment 256282
[details]
patch Clearing flags on attachment: 256282 Committed
r186587
: <
http://trac.webkit.org/changeset/186587
>
WebKit Commit Bot
Comment 5
2015-07-09 00:32:36 PDT
All reviewed patches have been landed. Closing bug.
Brent Fulgham
Comment 6
2015-07-09 11:11:33 PDT
This created two new test failures on Windows. Can you take a look?
chris fleizach
Comment 7
2015-07-09 11:15:35 PDT
(In reply to
comment #6
)
> This created two new test failures on Windows. Can you take a look?
I see the test that was part of this patch is failing test results image results actual failure expected failure history +accessibility/aria-table-with-presentational-elements.html expected actual diff pretty diff that's because the DRT methods are not implemented on windows, so we should skip that test (i'll do that now) what's the other failing test?
Brent Fulgham
Comment 8
2015-07-09 11:17:37 PDT
(In reply to
comment #7
)
> (In reply to
comment #6
) > > This created two new test failures on Windows. Can you take a look? > > I see the test that was part of this patch is failing > > > test results image results actual failure expected failure history > +accessibility/aria-table-with-presentational-elements.html expected actual > diff pretty diff > > that's because the DRT methods are not implemented on windows, so we should > skip that test (i'll do that now) > > what's the other failing test?
Sorry -- the other test failure is not related to you. Please just skip the test. Thanks!
chris fleizach
Comment 9
2015-07-09 12:06:03 PDT
(In reply to
comment #7
)
> (In reply to
comment #6
) > > This created two new test failures on Windows. Can you take a look? > > I see the test that was part of this patch is failing > > > test results image results actual failure expected failure history > +accessibility/aria-table-with-presentational-elements.html expected actual > diff pretty diff > > that's because the DRT methods are not implemented on windows, so we should > skip that test (i'll do that now) > > what's the other failing test?
http://trac.webkit.org/changeset/186595
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug