Source/WebCore/accessibility/AccessibilityARIAGridRow.cpp
@@ -114,6 +114,11 @@ AccessibilityObject* AccessibilityARIAGridRow::disclosedByRow() const
     return nullptr;
 }
     
+AccessibilityObject* AccessibilityARIAGridRow::parentObjectUnignored() const
+{
+    return parentTable();
+}
+    
 AccessibilityTable* AccessibilityARIAGridRow::parentTable() const
 {
     // The parent table might not be the direct ancestor of the row unfortunately. ARIA states that role="grid" should
